--- a/Css/styles.css
+++ b/Css/styles.css
@@ -281,13 +281,12 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
   z-index: 1000;
   position: relative;
   color: var(--clr-blue);
-  border-radius: 50%;
-  transition: 0.3s;
+  transition: 0.6s;
 }
 .cart:hover {
-  font-size: 2.2rem;
+  rotate: 15deg;
   cursor: pointer;
-  background-color: var(--clr-red);
+  color: var(--clr-lightgreen);
 }
 .text {
   padding: 10px 20px;
@@ -310,12 +309,13 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
 }
 .products .item .box .options-box .sizes-box .size {
   margin-bottom: 1rem;
+  transition: 0.2s;
 }
 .products .item .box .options-box .sizes-box h4 {
   text-transform: uppercase;
 }
 .products .item .box .options-box .sizes-box .size:hover {
-  border: 1px solid var(--clr-black);
+  box-shadow: 0 0 0 2px #5A6E61;
   cursor: pointer;
 }
 
