--- a/Css/styles.css
+++ b/Css/styles.css
@@ -11,7 +11,9 @@
   --clr-lightblue: #84B7C4;
   --clr-red: #C42121;
   --clr-text: #203230;
-
+  --clr-yellow: #dbdb7a;
+  --clr-orange: #f78e05;
+  --clr-grey-swatch: #747373;
 }
 
 * {
@@ -314,20 +316,21 @@ button {
 }
 .products .item .box .options-box .sizes-box .size {
   margin-bottom: 1rem;
-  transition: 0.2s;
+  padding: .3rem;
+  transition: 0.15s;
 }
 .products .item .box .options-box .sizes-box h4 {
   text-transform: uppercase;
 }
 .products .item .box .options-box .sizes-box .size:hover {
-  box-shadow: 0 0 0 2px #5A6E61;
+  box-shadow: 0 0 0 2px var(--clr-red);
   cursor: pointer;
 }
 
 .products .item .box .options-box .colours-box {
   display: flex;
-  justify-content: space-around;
-  padding: 2rem;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
 .products .item .box .options-box .colours-box .swatches {
@@ -347,7 +350,7 @@ button {
 .products .item .box .options-box .colours-box .swatch:hover {
   /* margin-top: .5rem; */
   margin: .3rem;
-  border: 4px solid var(--clr-black);
+  border: 4px solid var(--clr-red);
   cursor: pointer;
 }
 
@@ -356,11 +359,19 @@ button {
 }
 
 .products .item .box .options-box .colours-box .two {
-  background-color: var(--clr-red);
+  background-color: var(--clr-yellow);
 }
 
 .products .item .box .options-box .colours-box .three {
   background-color: var(--clr-green);
+}
+
+.products .item .box .options-box .colours-box .four {
+  background-color: var(--clr-black);
+}
+
+.products .item .box .options-box .colours-box .five {
+  background-color: var(--clr-orange);
 }
 
 
