--- a/Css/styles.css
+++ b/Css/styles.css
@@ -479,6 +479,11 @@ button {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  max-width: 60vw;
+  margin: auto;
+  background-color: var(--clr-lightblue);
+  border-radius: 10px;
+  padding: 2rem;
 }
 .cart {
   border: 1px solid var(--clr-grey);
@@ -512,7 +517,6 @@ button {
 }
 .cart-list {
   margin-top: 2rem;
-  min-width: 40vw;
 }
 .cart-item {
   margin-top: 1rem;
