--- a/Css/styles.css
+++ b/Css/styles.css
@@ -44,6 +44,11 @@ p {
   color: var(--clr-text);
   margin: auto;
 }
+.body-home,
+.body-contact {
+  height: 100vh;
+  overflow: hidden;
+}
 
 /* 
 —————————————————————————‡——————————————————————— NAV */
@@ -147,7 +152,6 @@ nav .list-box .hamburger:hover .strip:nth-child(3) {
 .home-container {
   width: 100%;
   position: relative;
-  min-height: 100vh;
   background: url(/images/photos/pexels-darshak-pandya-4378759.jpg);
   background-repeat: no-repeat;
   background-color: var(--clr-black);
