suddenly double pages, don't know why + form start

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -742,6 +742,28 @@ button {
   grid-row: 1/3;
 }
 
+/* 
+—————————————————————————‡——————————————————————— CONTACT PAGE */
+.container {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: var(--clr-lightblue);
+  border: 1px solid var(--clr-red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form {
+  width: 100%;
+  max-width: 800px;
+  height: 600px;
+  background-color: var(--clr-orange);
+  border-radius: 10px;
+  box-shadow: 0 0 .8rem -.5rem var(--clr-black);
+  
+}
 
 /* MEDIA QUERIES 
 -----------------------------------------------------------*/
