--- a/Css/styles.css
+++ b/Css/styles.css
@@ -750,19 +750,82 @@ button {
   min-height: 100vh;
   padding: 2rem;
   background-color: var(--clr-lightblue);
-  border: 1px solid var(--clr-red);
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 .form {
   width: 100%;
   max-width: 800px;
-  height: 600px;
-  background-color: var(--clr-orange);
+  background-color: var(--clr-white);
   border-radius: 10px;
   box-shadow: 0 0 .8rem -.5rem var(--clr-black);
-  
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.contact-info {
+  background-color: var(--clr-blue);
+}
+.contact-form {
+  background-color: var(--clr-green);
+  position: relative;
+}
+form {
+  padding: 2rem;
+  z-index: 100;
+  position: relative;
+}
+.form-title {
+  color: var(--clr-black);
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+.input {
+  width: 100%;
+  padding: .5rem;
+  font-size: 1.2rem;
+  border: 2px solid var(--clr-white);
+  background: none;
+  border-radius: 20px;
+  transition: 0.2s;
+}
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: .5rem;
+  transform: translateY(-50%);
+  padding: 0 0.5rem;
+  color: var(--clr-white);
+  font-size: 1.2rem;
+  pointer-events: none;
+}
+.textarea .input {
+  padding: .5rem;
+  min-height: 100px;
+  overflow-y: auto;
+  resize: none;
+}
+.textarea label {
+  top: .8rem;
+  transform: translateY(0);
+}
+.btn {
+  padding: .5rem 1rem;
+  color: var(--clr-black);
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: .2rem;
+  text-transform: uppercase;
+  border-radius: 20px;
+  border: 3px solid var(--clr-black);
+  background: none;
 }
 
 /* MEDIA QUERIES 
