--- a/Css/styles.css
+++ b/Css/styles.css
@@ -826,6 +826,12 @@ form {
   border-radius: 20px;
   border: 3px solid var(--clr-black);
   background: none;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.btn:hover {
+  letter-spacing: .4rem;
+  border: 3px solid var(--clr-grey);
 }
 
 /* MEDIA QUERIES 
