--- a/Css/styles.css
+++ b/Css/styles.css
@@ -809,66 +809,13 @@ form {
   transition: 0.3s;
   letter-spacing: 2px;
 }
-/* .input-container label {
-  position: absolute;
-  top: 50%;
-  left: .5rem;
-  transform: translateY(-50%);
-  padding: 0 0.5rem;
-  color: var(--clr-white);
-  font-size: 1.2rem;
-  pointer-events: none;
-}
-.input-container span {
-  position: absolute;
-  top: 0;
-  left: 1.5rem;
-  transform: translateY(-50%);
-  font-size: .6rem;
-  padding: 1.8rem;
-  color: transparent;
-  z-index: 500;
-  pointer-events: none;
-}
-.input-container span:before,
-.input-container span:after {
-  content: "";
-  position: absolute;
-  width: 10%;
-  opacity: 0;
-  transition: 0.4s;
-  height: 1rem;
-  background-color: var(--clr-green);
-  top: 50%;
-  transform: translateY(-50%);
-}
-.input-container span:before {
-  left: 50%;
-}
-.input-container span:after {
-  right: 50%;
-}
-.input-container.focus label{
-  top: 0;
-  left: 1.5rem;
-  transform: translateY(-50%);
-  z-index: 1000;
-}
-.input-container.focus span:before,
-.input-container.focus span:after {
-  width: 50%;
-  opacity: 1;
-} */
 .textarea.input {
   padding: .5rem;
   min-height: 100px;
   overflow-y: auto;
   resize: none;
 }
-/* .textarea label {
-  top: .8rem;
-  transform: translateY(0);
-} */
+
 .btn {
   padding: .5rem 1rem;
   color: var(--clr-black);
@@ -886,7 +833,38 @@ form {
   letter-spacing: .4rem;
   border: 3px solid var(--clr-grey);
 }
-
+.icon {
+  font-size: 1.5rem;
+  margin-right: 1rem;
+}
+.contact-info,
+.contact-container {
+  padding: 2rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.contact-info h2 {
+  margin-bottom: 1rem;
+}
+.information {
+  display: flex;
+  margin: 0.7rem 0;
+  align-items: center;
+  justify-content: space-between;
+}
+.info p {
+  margin: 0;
+}
+.social-contact {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.social-contact a {
+  color: var(--clr-black);
+  padding: 0 2rem;
+}
 /* MEDIA QUERIES 
 -----------------------------------------------------------*/
 @media(min-width: 200px) and (max-width: 480px) {
