--- a/Css/styles.css
+++ b/Css/styles.css
@@ -398,7 +398,8 @@ button {
   justify-content: space-around;
 }
 
-.product .specific {
+.product, 
+.specific {
   width: 100%;
   height: 100vh;
   display: flex;
